example with button fixed version bc of block feature use atomic int

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,20 @@
+{% block index %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <title>HTMX Intro</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  {% block counter %}
   Count {{ count }}
+  <button hx-post="/count" hx-target="body">Count</button>
+  {% endblock counter %}
 </body>
 
 </html>
+{% endblock index %}
